ncc/testsuite/positive/Issue-git-0479.n
//REFERENCE: Issue-git-0479-macro

System.Console.WriteLine(M());

/*
BEGIN-OUTPUT
(1, 2)
END-OUTPUT
*/ 