ncc/testsuite/negative/external-extensions.n
// REFERENCE: external-extensions-lib1.dll
// REFERENCE: external-extensions-lib2.dll

// GW: System.Runtime.CompilerServices.ExtensionAttribute attribute from external-extensions-lib.* is ignored

System.Console.WriteLine (1);

/*
BEGIN-OUTPUT
1
END-OUTPUT
*/
